--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
-    <script src="/js/fitvids.js"></script>
+    <script src="js/fitvids.js"></script>
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
